<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Pagamento.Pagamento"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tela_pagamento"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:id="@+id/edit_bairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_bairro"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/edit_rua_e_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rua_e_numero"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/edit_cidade_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cidade_e_estado"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/edit_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Celular"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:maxLength="11"
        android:inputType="number"
        />

    <Button
        android:id="@+id/bt_fazer_pagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_botao_fazer_pagamento"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textAllCaps="false"
        android:layout_margin="20dp"

        />

</LinearLayout>