<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetalhesProduto.DetalhesProduto">


    <ImageView
        android:id="@+id/dt_fotoProduto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@color/black"
        android:scaleType="center"
        />

    <TextView
        android:id="@+id/dt_nomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Camisa Havai"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <TextView
        android:id="@+id/dt_tituloTamanho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tamanho_detalhes"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:id="@+id/tamanho_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tamanho_38"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:layout_marginEnd="10dp"
            />
        <RadioButton
            android:id="@+id/tamanho_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tamanho_39"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:layout_marginEnd="10dp"/>
        <RadioButton
            android:id="@+id/tamanho_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tamanho_40"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:layout_marginEnd="10dp"/>
        <RadioButton
            android:id="@+id/tamanho_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tamanho_41"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:layout_marginEnd="10dp"/>
        <RadioButton
            android:id="@+id/tamanho_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tamanho_42"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:layout_marginEnd="10dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_preco"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:id="@+id/dt_precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 25,00"
        android:textSize="25sp"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/button_finalizarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_botao_finalizar_pedido"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_margin="20dp"
        />

</LinearLayout>